--- a/frontend/templates/pages/register.html
+++ b/frontend/templates/pages/register.html
@@ -19,7 +19,7 @@
                             <div>
                                 <input type="submit" value="Войти" class="register-submit">
                             </div>
-                            <div class="forget"><a href="#">Восстановление пароля</a></div>
+{#                            <div class="forget"><a href="#">Восстановление пароля</a></div>#}
                         </form>
                     </div>
             </div>
@@ -39,8 +39,8 @@
                             </div>
                             <div class="sky-form">
                                 <label class="checkbox">
-                                    <input type="checkbox" name="checkbox"><i></i>Принимаю
-                                    <a class="terms" href="#">правила пользования</a> сервиса
+                                    <input type="checkbox" name="checkbox"><i></i>
+                                    Принимаю <a class="terms" href="#">правила использования</a> сервиса
                                 </label>
                             </div>
                         </form>
