--- a/frontend/templates/components/tile_a.html
+++ b/frontend/templates/components/tile_a.html
@@ -1,7 +1,10 @@
 {% load core.tags %}
 {% load mathfilters %}
 
-<div class="col-md-{% attribute 'Width' type='number' id='width' min=1 max=12 default=width %} arriv-{{ outer_class }}">
+{% attribute 'Visible' type='boolean' id='visible' default=True %}
+
+<div class="col-md-{% attribute 'Width' type='number' id='width' min=1 max=12 default=width %} arriv-{{ outer_class }}"
+    {% if not visible and not edit_mode %}style="display: none;"{% endif %}>
     {% with img_width=width|mul:95|sub:offset %}
         <img src="{% attribute 'Image' type='image' id='image' width=img_width height=height %}" class="img-responsive img-rounded">
     {% endwith %}
@@ -10,10 +13,5 @@
         <h3>{% attribute 'Title' type='text' id='class' default='TITLE' %}</h3>
         <p>{% attribute 'Description' type='text' id='description' default='DESCRIPTION' %}</p>
         <a href="{% attribute 'URL' type='text' id='url' default='#' %}" class="link-fill"></a>
-        <div class="crt-btn">
-            <a href="{% attribute 'URL' type='text' id='url' default='#' %}">
-                {% attribute 'Button' type='text' id='button' default='BUTTON' %}
-            </a>
-        </div>
     </div>
 </div>
