--- a/frontend/templates/pages/products.html
+++ b/frontend/templates/pages/products.html
@@ -16,103 +16,43 @@
                         {% for item in root %}
                             <li>
                                 <a href="{% url 'products' pk=item.pk %}"
-                                {% if item.pk == root_active.pk %}class="active"{% endif %}>{{ item.name }}</a>
+                                {% if item.pk == current.pk %}class="active"{% endif %}>{{ item.name }}</a>
                             </li>
                         {% endfor %}
                     </ul>
                 </div>
-                <!--<h3>filter by</h3>
-                <section  class="sky-form">
-                    <h4>catogories</h4>
+
+                {% if all_subs %}
+                    <section  class="sky-form">
+                        <h4>Категория</h4>
                         <div class="row1 scroll-pane">
                             <div class="col col-4">
-                                <label class="checkbox"><input type="checkbox" name="checkbox" checked=""><i></i>kurtas</label>
-                            </div>
-                            <div class="col col-4">
-                                <label class="checkbox"><input type="checkbox" name="checkbox"><i></i>kutis</label>
-                                <label class="checkbox"><input type="checkbox" name="checkbox"><i></i>churidar kurta</label>
-                                <label class="checkbox"><input type="checkbox" name="checkbox"><i></i>salwar</label>
-                                <label class="checkbox"><input type="checkbox" name="checkbox"><i></i>printed sari</label>
-                                <label class="checkbox"><input type="checkbox" name="checkbox" ><i></i>shree</label>
-                                <label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Anouk</label>
-                                <label class="checkbox"><input type="checkbox" name="checkbox"><i></i>biba</label>
-                                <label class="checkbox"><input type="checkbox" name="checkbox"><i></i>fashion sari</label>
-                                <label class="checkbox"><input type="checkbox" name="checkbox"><i></i>fashion sari</label>
-                                <label class="checkbox"><input type="checkbox" name="checkbox"><i></i>fashion sari</label>
-                                <label class="checkbox"><input type="checkbox" name="checkbox"><i></i>fashion sari</label>
-                                <label class="checkbox"><input type="checkbox" name="checkbox"><i></i>fashion sari</label>
-                                <label class="checkbox"><input type="checkbox" name="checkbox"><i></i>fashion sari</label>
-                                <label class="checkbox"><input type="checkbox" name="checkbox"><i></i>fashion sari</label>
-                                <label class="checkbox"><input type="checkbox" name="checkbox"><i></i>fashion sari</label>
+                                {% for item in all_subs %}
+                                    <a class="checkbox" data-sub="{{ item.pk }}">
+                                        <input type="checkbox" name="checkbox" {% if item in subs %}checked{% endif %}>
+                                        <i></i>{{ item.name }}
+                                    </a>
+                                {% endfor %}
                             </div>
                         </div>
-                </section>-->
+                    </section>
+                {% endif %}
+
+                {% if all_brands %}
                 <section  class="sky-form">
-                    <h4>Категория</h4>
+                    <h4>Производитель</h4>
                     <div class="row1 scroll-pane">
                         <div class="col col-4">
-                            {% for item in categories %}
-                                <a class="checkbox" href="{% url 'products' pk=item.pk %}">
-                                    <input type="checkbox" name="checkbox" {% if item.pk == category_active.pk %}checked{% endif %}>
-                                    <i></i>{{ item.name }}
+                            {% for item in all_brands %}
+                                <a class="checkbox" data-brand="{{ item }}">
+                                    <input type="checkbox" name="checkbox" {% if item in brands %}checked{% endif %}>
+                                    <i></i>{{ item }}
                                 </a>
                             {% endfor %}
                         </div>
                     </div>
                 </section>
-                <section  class="sky-form">
-                    <h4>Подкатегория</h4>
-                    <div class="row1 scroll-pane">
-                        <div class="col col-4">
-                            {% for item in subcategories %}
-                                <a class="checkbox" href="{% url 'products' pk=item.pk %}">
-                                    <input type="checkbox" name="checkbox" {% if item.pk == subcategory_active.pk %}checked{% endif %}>
-                                    <i></i>{{ item.name }}
-                                </a>
-                            {% endfor %}
-                        </div>
-                    </div>
-                </section>
-                <!--<section class="sky-form">
-                    <h4>colour</h4>
-                    <ul class="w_nav2">
-                        <li><a class="color1" href="#"></a></li>
-                        <li><a class="color2" href="#"></a></li>
-                        <li><a class="color3" href="#"></a></li>
-                        <li><a class="color4" href="#"></a></li>
-                        <li><a class="color5" href="#"></a></li>
-                        <li><a class="color6" href="#"></a></li>
-                        <li><a class="color7" href="#"></a></li>
-                        <li><a class="color8" href="#"></a></li>
-                        <li><a class="color9" href="#"></a></li>
-                        <li><a class="color10" href="#"></a></li>
-                        <li><a class="color12" href="#"></a></li>
-                        <li><a class="color13" href="#"></a></li>
-                        <li><a class="color14" href="#"></a></li>
-                        <li><a class="color15" href="#"></a></li>
-                        <li><a class="color5" href="#"></a></li>
-                        <li><a class="color6" href="#"></a></li>
-                        <li><a class="color7" href="#"></a></li>
-                        <li><a class="color8" href="#"></a></li>
-                        <li><a class="color9" href="#"></a></li>
-                        <li><a class="color10" href="#"></a></li>
-                    </ul>
-                </section>-->
-                <!--<section class="sky-form">
-                    <h4>discount</h4>
-                    <div class="row1 scroll-pane">
-                        <div class="col col-4">
-                            <label class="radio"><input type="radio" name="radio" checked=""><i></i>60 % and above</label>
-                            <label class="radio"><input type="radio" name="radio"><i></i>50 % and above</label>
-                            <label class="radio"><input type="radio" name="radio"><i></i>40 % and above</label>
-                        </div>
-                        <div class="col col-4">
-                            <label class="radio"><input type="radio" name="radio"><i></i>30 % and above</label>
-                            <label class="radio"><input type="radio" name="radio"><i></i>20 % and above</label>
-                            <label class="radio"><input type="radio" name="radio"><i></i>10 % and above</label>
-                        </div>
-                    </div>
-                </section>-->
+                {% endif %}
             </div>
         </div>
 
@@ -130,14 +70,6 @@
                         <span> - {{ count }} товаров</span>
                     </h4>
                 </a>
-                <!--<ul class="w_nav">
-                    <li>Sort : </li>
-                    <li><a class="active" href="#">popular</a></li> |
-                    <li><a href="#">new </a></li> |
-                    <li><a href="#">discount</a></li> |
-                    <li><a href="#">price: Low High </a></li>
-                    <div class="clear"></div>
-                </ul>-->
                 <div class="clearfix"></div>
             </div>
             <div class="grids_of_4">
@@ -157,15 +89,7 @@
                             <div class="item_add"><span class="item_price"><h6>{{ product.price }} руб.</h6></span></div>
                             <div class="item_add">
                                 <span class="item_price">
-                                    {% if product.quantity == 0 %}
-                                        <a href="#">Предзаказ</a>
-                                    {% else %}
-                                        {% if product.pk in request.session.products|default:'' %}
-                                            <a href="{% url 'cart_action' action='remove' data=product.pk %}">В корзине</a>
-                                        {% else %}
-                                            <a href="{% url 'cart_action' action='add' data=product.pk %}">В корзину</a>
-                                        {% endif %}
-                                    {% endif %}
+                                    <a href="{{ product.get_absolute_url }}">Перейти</a>
                                 </span>
                             </div>
                         </div>
