--- a/frontend/templates/pages/product.html
+++ b/frontend/templates/pages/product.html
@@ -127,7 +127,7 @@
                             </div>
                             <div class="product_price">
                                 <span class="price-access">{{ product.price }} руб.</span>
-                                <button class="button1"><span>Добавить в корзину</span></button>
+                                {% include 'core/cart_button.html' %}
                             </div>
                             <div class="clearfix"></div>
                         </div>
