--- a/frontend/templates/pages/register.html
+++ b/frontend/templates/pages/register.html
@@ -1,6 +1,8 @@
 {% extends 'core/base.html' %}
 {% load staticfiles %}
 
+{% block title %}Регистрация{% endblock title %}
+
 {% block content %}
     <div class="container">
         <div class="main">
