--- a/frontend/static/css/megamenu.css
+++ b/frontend/static/css/megamenu.css
@@ -11,10 +11,12 @@
 
 .megamenu li {
     margin-bottom: 0;
-    display: inline
+    display: inline;
+    background: inherit;
 }
 
 .megamenu > li > a {
+    background: inherit;
     float: left;
     padding: 8px 34px;
     text-decoration: none;
@@ -25,6 +27,17 @@
     -moz-transition: all 0.3s ease-in-out;
     -o-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
+}
+
+.megamenu > li > a > span {
+    color: transparent;
+    background: inherit;
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
+    filter: invert(1) grayscale(1) contrast(10);
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 .megamenu > li.active > a {
