--- a/frontend/templates/components/menu_button.html
+++ b/frontend/templates/components/menu_button.html
@@ -3,7 +3,7 @@
 <li class="grid">
     <a data-color="{% attribute 'Color' type='color' id='color' default='#AAA' %}"
        href="{% attribute 'URL' type='text' id='url' default='#' %}">
-        {% attribute 'Title' type='text' id='title' default='Button' %}
+        <span>{% attribute 'Title' type='text' id='title' default='Button' %}</span>
     </a>
     {% attribute 'Sections' type='list' id='sections' component='menu_section.html' fake=True %}
     {% if not list_sections_empty %}
