button style fixes

--- a/frontend/static/css/style.css
+++ b/frontend/static/css/style.css
@@ -200,7 +200,7 @@ body a {
 }
 
 input[type=submit].order {
-    background: #00405d;
+    background: #aeafc5;
     padding: 10px 20px;
     border: none;
 
@@ -214,7 +214,7 @@ input[type=submit].order {
 }
 
 input[type=submit].order:hover {
-    background: #615c85;
+    background: #8385b2;
 }
 
 #order-form {
@@ -231,6 +231,7 @@ input[type=submit].order:hover {
 #order-form select,
 #order-form input:not([type=submit]),
 .cpns {
+	border-radius: 10px;
     height: 35px;
 }
 
@@ -268,14 +269,14 @@ input[type=submit].order:hover {
 a.cpns {
     background: #5c1e39;
     color: #fff;
-
+    border-radius: 10px;
     padding: 10px;
     font-size: 0.8em;
     font-weight: 600;
 }
 
 a.cpns:hover {
-    background: #615c85;
+    background: #8385b2;
 }
 
 .total-item p {
@@ -291,7 +292,7 @@ a.cpns:hover {
 }
 
 a.continue {
-    background: #00405d;
+    background: #8385b2;
     padding: 10px 20px;
 
     font-size: 1em;
@@ -458,7 +459,6 @@ ul.qty li p {
 }
 
 .top_right ul li a:hover {
-    color: #5c1e39;
     text-decoration: none;
 }
 
@@ -553,7 +553,7 @@ select.item_Size {
 }
 
 .item_add a {
-    background: rgb(9, 209, 182);
+    background: #aeafc5;
     border: none;
     border-radius: 6px;
     color: #fff;
@@ -685,7 +685,7 @@ fieldset#body {
 }
 
 #loginForm #login:hover {
-    background: #00405d;
+    background: #8385b2;
 }
 
 /* Forgot your password */
@@ -812,7 +812,7 @@ input:focus {
 }
 
 .create_btn a:hover {
-    background: #00405d;
+    background: #8385b2;
     color: #ffffff;
     text-decoration: none;
 }
@@ -1000,7 +1000,7 @@ ul.icon1 {
 .sub-icon1 ul li h3 {
     text-align: center;
     font-size: 1em;
-    color: #00405d;
+    color: #8385b2;
     text-transform: uppercase;
     margin-bottom: 4%;
 }
@@ -1017,7 +1017,7 @@ ul.icon1 {
 }
 
 .sub-icon1 ul li p a {
-    color: #00405d;
+    color: #8385b2;
 }
 
 .sub-icon1 ul li p a:hover {
@@ -1070,7 +1070,7 @@ ul.megamenu.skyblue {
 }
 
 .h_nav ul li a:hover {
-    color: #00405d;
+    color: #8385b2;
     text-decoration: underline;
 }
 
@@ -1362,12 +1362,11 @@ i.goog:hover {
     outline: none;
     border: none;
     /*width: 100%;*/
-    text-transform: uppercase;
     border-radius: 10px;
 }
 
 .stay form input[type="submit"]:hover {
-    background: rgba(15, 15, 15, 0.72);
+    background: #8385b2;
 }
 
 .stay-left {
@@ -1651,7 +1650,7 @@ ul.grid_2 li {
 }
 
 .w_nav1 ul li a:hover {
-    color: #00405d;
+    color: #8385b2;
 }
 
 .w_nav2 {
@@ -2172,7 +2171,7 @@ ul.grid_2 li {
 }
 
 .w_nav li a:hover {
-    color: #00405d;
+    color: #8385b2;
 }
 
 .grids_of_4 {
@@ -2568,7 +2567,7 @@ p.product_descr {
 }
 
 .product_price > a:hover {
-    background: #00405d;
+    background: #8385b2;
     color: #fff;
 }
 
@@ -2596,7 +2595,7 @@ p.product_descr {
 }
 
 .desc1 p a:hover {
-    color: #00405d;
+    color: #8385b2;
 }
 
 .det_nav {
@@ -2657,7 +2656,7 @@ p.product_descr {
 }
 
 .btn_form a:hover {
-    background: #00405d;
+    background: #8385b2;
     text-decoration: none;
 }
 
@@ -2674,7 +2673,7 @@ p.product_descr {
 }
 
 .desc1 a span:hover {
-    color: #00405d;
+    color: #8385b2;
     text-decoration: none;
 }
 
@@ -2702,7 +2701,7 @@ p.product_descr {
 
 .registration h2 {
     font-size: 1.5em;
-    color: #00405d;
+    color: #8385b2;
     /*text-transform: capitalize;*/
     margin-bottom: 4%;
 }
@@ -2785,6 +2784,7 @@ label {
 
 .registration_form input[type="text"], .registration_form input[type="email"], .registration_form input[type="tel"], .registration_form input[type="password"] {
     padding: 8px;
+    border-radius: 10px;
     display: block;
     width: 100%;
     outline: none;
@@ -2834,13 +2834,13 @@ input[required], textarea[required] {
 
 .registration_form input[type="submit"]:hover {
     color: #ffffff;
-    background: #00405d;
+    background: #8385b2;
 }
 
 .terms {
     text-decoration: underline;
     /*text-transform: capitalize;*/
-    color: #00405d;
+    color: #8385b2;
 }
 
 .terms:hover {
@@ -2927,7 +2927,7 @@ input[required], textarea[required] {
 
 .shoping_left h4 a {
     text-transform: uppercase;
-    color: #00405d;
+    color: #8385b2;
     font-size: 1em;
     text-decoration: underline;
     -webkit-transition: all 0.3s ease-in-out;
@@ -2989,7 +2989,7 @@ ul.s_icons {
 }
 
 .s_icons li a:hover {
-    background: #00405d;
+    background: #8385b2;
 }
 
 .s_icons li a img {
@@ -3014,7 +3014,7 @@ ul.s_icons {
 }
 
 .shoping_right p a {
-    color: #00405d;
+    color: #8385b2;
 }
 
 .shoping_bag {
@@ -3031,7 +3031,7 @@ ul.s_icons {
 
 .shoping_bag1 h2 a {
     -webkit-text-stroke: 0.4px;
-    color: #00405d;
+    color: #8385b2;
     font-size: 0.8725em;
     -webkit-transition: all 0.3s ease-in-out;
     -moz-transition: all 0.3s ease-in-out;
@@ -3071,12 +3071,12 @@ ul.s_icons {
 }
 
 .shoping_left a.btn1:hover {
-    background: #00405d;
+    background: #8385b2;
     text-decoration: none;
 }
 
 .shoping_right p span.color {
-    color: #00405d;
+    color: #8385b2;
 }
 
 h4.title {
@@ -3112,7 +3112,7 @@ p.cart a {
 
 .contact h2 {
     font-size: 1.5em;
-    color: #00405d;
+    color: #8385b2;
     text-shadow: 0 1px 0 #ffffff;
     text-transform: capitalize;
     margin-top: 0.5em;
@@ -3165,6 +3165,7 @@ p.cart a {
     margin-top: 10px;
     -webkit-appearance: none;
     border: none;
+    border-radius: 10px;
     outline: none;
     font-family: 'Open Sans', sans-serif;
     cursor: pointer;
@@ -3181,7 +3182,7 @@ p.cart a {
 }
 
 .contact-form input[type="submit"]:hover {
-    background: #00405d;
+    background: #8385b2;
     color: #ffffff;
 }
 
@@ -3325,7 +3326,7 @@ p.cart a {
 
 @media (max-width: 800px) {
     .top_left {
-        float: right;
+        float: none;
     }
 
     .top_right {
