--- a/frontend/templates/core/footer.html
+++ b/frontend/templates/core/footer.html
@@ -41,9 +41,9 @@
 </div>
 <div class="footer">
     <div class="container">
-        {% component 'footer_column.html' id='footer-column-a' class="col-md-3 cust" %}
-        {% component 'footer_column.html' id='footer-column-b' class="col-md-3 myac" %}
-		<div class="col-md-6 our-st">
+        {% component 'footer_column.html' id='footer-column-a' class="col-xs-6 col-sm-3 cust" %}
+        {% component 'footer_column.html' id='footer-column-b' class="col-xs-6 col-sm-3 myac" %}
+		<div class="col-xs-12 col-sm-6 our-st">
 			<div class="our-left"><h4>{% component 'text.html' id='footer-last-title' %}</h4></div>
 			<div class="clearfix"></div>
             <li><i class="clock"></i> {% component 'text.html' id='footer-schedule-link' %}</li>
