--- a/frontend/static/css/style.css
+++ b/frontend/static/css/style.css
@@ -33,7 +33,7 @@ body a {
 }
 
 #scroll2top {
-    background: #5c1e39 url('../images/up_arrow.png') center center no-repeat;
+    background: #aeafc5 url('../images/up_arrow.png') center center no-repeat;
     color: #fff;
     cursor: pointer;
     position: fixed;
@@ -266,7 +266,7 @@ input[type=submit].order:hover {
 }
 
 a.cpns {
-    background: #5c1e39;
+    background: #aeafc5;
     color: #fff;
 
     padding: 10px;
@@ -396,20 +396,26 @@ ul.qty li p {
 /*-- header_top --*/
 .top_bg {
     /*background: #252525;*/
-    background: #5c1e39;
+    background: #aeafc5;
 }
 
 .header_top {
-    padding: 15px 0 5px;
+    padding: 10px 0 10px;
+    display: flex;
+    align-items: baseline;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 .top_left {
-    float: right;
+    margin: 0;
 }
 
 .top_left h2 {
+    margin: 0;
     text-transform: uppercase;
     font-size: 12px;
+    font-weight: 400;
     color: #ffffff;
 }
 
@@ -425,9 +431,8 @@ ul.qty li p {
 }
 
 .top_right {
-    float: left;
+    margin-right: auto;
     color: #ffffff;
-    margin-top: -5px;
 }
 
 .top_right ul {
@@ -458,7 +463,7 @@ ul.qty li p {
 }
 
 .top_right ul li a:hover {
-    color: #5c1e39;
+    color: #444565;
     text-decoration: none;
 }
 
@@ -670,7 +675,7 @@ fieldset#body {
     font-family: 'Open Sans', sans-serif;
     width: auto;
     float: left;
-    background: #5c1e39;
+    background: #aeafc5;
     color: #fff;
     font-size: 0.8725em;
     padding: 8px 20px;
@@ -769,7 +774,9 @@ input:focus {
 }
 
 .search input[type="submit"] {
-    background: url('../images/search.png') no-repeat 0px 1px;
+    background: url('../images/search.png') no-repeat;
+    background-position: center;
+    background-size: auto 75%;
     border: none;
     cursor: pointer;
     width: 24px;
@@ -1168,8 +1175,8 @@ ul.megamenu.skyblue {
 }
 
 .crt-btn a:hover {
-    background: #5c1e39;
-    border: 1px solid #5c1e39;
+    background: #aeafc5;
+    border: 1px solid #aeafc5;
 }
 
 .arriv-info1 {
@@ -1353,7 +1360,7 @@ i.goog:hover {
 }
 
 .stay form input[type="submit"] {
-    background: #5c1e39;
+    background: #aeafc5;
     padding: 0.5em;
     color: #fff;
     font-size: 1em;
@@ -1597,11 +1604,11 @@ ul.grid_2 li {
 
 ul.grid_2 li:hover {
     background: #e9e9e9;
-    color: #5c1e39;
+    color: #aeafc5;
 }
 
 ul.grid_2 li h5:hover {
-    color: #5c1e39;
+    color: #aeafc5;
 }
 
 ul.grid_2 li {
@@ -1615,7 +1622,7 @@ ul.grid_2 li {
 }
 
 .arriv-info2 a h3:hover {
-    color: #5c1e39;
+    color: #aeafc5;
 }
 
 /* start women */
@@ -1634,7 +1641,7 @@ ul.grid_2 li {
 
 .w_nav1 a.active {
     text-transform: uppercase;
-    color: #5c1e39;
+    color: #aeafc5;
     font-size: 1em;
     margin-bottom: 5px;
 }
@@ -1988,7 +1995,7 @@ ul.grid_2 li {
 
 /* checked state */
 .sky-form .radio input + i:after {
-    background-color: #5c1e39;
+    background-color: #aeafc5;
 }
 
 .sky-form .checkbox input + i:after {
@@ -1998,7 +2005,7 @@ ul.grid_2 li {
 .sky-form .radio input:checked + i,
 .sky-form .checkbox input:checked + i,
 .sky-form .toggle input:checked + i {
-    border-color: #5c1e39;
+    border-color: #aeafc5;
 }
 
 /* error state */
@@ -2204,7 +2211,7 @@ ul.grid_2 li {
 }
 
 .grid1_of_4 h4 a:hover {
-    color: #5c1e39;
+    color: #aeafc5;
 }
 
 .grid1_of_4 p {
@@ -2321,7 +2328,7 @@ span.text {
 }
 
 span.price-new {
-    color: #5c1e39;
+    color: #aeafc5;
     margin-right: 15px;
     font-weight: 500;
     font-size: 1.3em;
@@ -2553,7 +2560,7 @@ p.product_descr {
     font-family: 'Open Sans', sans-serif;
     border: none;
     border-radius: 10px;
-    background: #5c1e39;
+    background: #aeafc5;
     padding: 7px 15px;
     color: #FFF;
     font-size: 13px;
@@ -2646,7 +2653,7 @@ p.product_descr {
     display: inline-block;
     font-size: 1em;
     padding: 10px 34px;
-    background: #5c1e39;
+    background: #aeafc5;
     border-radius: 10px;
     color: #fff;
     text-transform: uppercase;
@@ -2799,13 +2806,13 @@ label {
 }
 
 input[required], textarea[required] {
-    border-color: #5c1e39 !important;
+    border-color: #aeafc5 !important;
 }
 
 .errorlist {
     list-style-position: inside;
     padding-left: 10px;
-    color: #5c1e39;
+    color: #aeafc5;
 }
 
 .errorlist li {
@@ -2818,7 +2825,7 @@ input[required], textarea[required] {
     color: #ffffff;
     text-transform: capitalize;
     display: inline-block;
-    background: #5c1e39;
+    background: #aeafc5;
     padding: 10px 20px;
     transition: 0.5s ease;
     -moz-transition: 0.5s ease;
@@ -2878,7 +2885,7 @@ input[required], textarea[required] {
 }
 
 .shoping_bag h4 span {
-    color: #5c1e39;
+    color: #aeafc5;
 }
 
 .s_art {
@@ -3063,7 +3070,7 @@ ul.s_icons {
     padding: 10px 20px;
     font-size: 1.2em;
     color: #ffffff;
-    background: #5c1e39;
+    background: #aeafc5;
     -webkit-transition: all 0.3s ease-in-out;
     -moz-transition: all 0.3s ease-in-out;
     -o-transition: all 0.3s ease-in-out;
@@ -3080,7 +3087,7 @@ ul.s_icons {
 }
 
 h4.title {
-    color: #5c1e39;
+    color: #aeafc5;
     margin-bottom: 0.5em;
     font-size: 1.6em;
     line-height: 1.2em;
@@ -3097,7 +3104,7 @@ p.cart {
 
 p.cart a {
     text-decoration: underline;
-    color: #5c1e39;
+    color: #aeafc5;
 }
 
 .check-out {
@@ -3171,7 +3178,7 @@ p.cart a {
     display: inline-block;
     font-size: 1em;
     padding: 12px 25px;
-    background: #5c1e39;
+    background: #aeafc5;
     color: #fff;
     text-transform: uppercase;
     -webkit-transition: all 0.3s ease-in-out;
@@ -3324,14 +3331,6 @@ p.cart a {
 }
 
 @media (max-width: 800px) {
-    .top_left {
-        float: right;
-    }
-
-    .top_right {
-        float: left;
-    }
-
     .top_bg {
         text-align: center;
     }
@@ -3385,6 +3384,10 @@ p.cart a {
 }
 
 @media (max-width: 768px) {
+    .our-st {
+        margin-top: 20px;
+    }
+
     #loginContainer a span {
         padding: 2px 4px;
     }
@@ -3562,12 +3565,12 @@ p.cart a {
 
     .our-st {
         float: left;
-        width: 44%;
+        /*width: 44%;*/
     }
 
     .cust {
         float: left;
-        width: 21%;
+        /*width: 21%;*/
     }
 
     .cr_btn a {
@@ -3582,7 +3585,7 @@ p.cart a {
 
     .myac {
         float: left;
-        width: 19%;
+        /*width: 19%;*/
     }
 
     .footer h4 {
@@ -3608,7 +3611,15 @@ p.cart a {
     }
 }
 
+.cart-icon {
+    max-width: 30px;
+}
+
 @media (max-width: 640px) {
+    .cart-icon {
+        max-width: 25px;
+    }
+
     .create_btn a {
         padding: 10px 5px;
         font-size: 0.8125em;
@@ -3856,13 +3867,25 @@ p.cart a {
 }
 
 @media (max-width: 480px) {
+    .log {
+        margin-right: 5px;
+    }
+
+    .top_left {
+        margin: 0 auto;
+    }
+
+    .top_right {
+        margin: 0 auto;
+    }
+
     .top_left h2 {
         font-size: 11px;
         line-height: 1.5em;
     }
 
     .search {
-        display: none;
+        margin-top: 5px;
     }
 
     .span1_of_4 {
@@ -3926,12 +3949,12 @@ p.cart a {
     }
 
     .header_top {
-        padding: 13px 0 2px;
+        padding: 8px 0 8px;
     }
 
     .header_right {
         float: right;
-        width: 42%;
+        width: 50%;
     }
 
     .reg {
@@ -4041,7 +4064,7 @@ p.cart a {
 
     .cust {
         float: left;
-        width: 33.33%;
+        /*width: 33.33%;*/
     }
 
     .abt {
@@ -4055,8 +4078,8 @@ p.cart a {
     }
 
     .our-st {
-        float: left;
-        width: 100%;
+        /*float: left;*/
+        /*width: 100%;*/
         margin: 1.5em 0 0;
     }
 
@@ -4122,17 +4145,16 @@ p.cart a {
     }
 
     .top_right {
-        float: none;
         text-align: center;
     }
 
     .reg {
-        display: none;
+        /*display: none;*/
     }
 
     #loginContainer a span {
-        padding: 2px 10px;
-        font-size: 1em;
+        padding: 0;
+        font-size: 0.8em;
     }
 
     .rgt-bottom {
@@ -4143,13 +4165,14 @@ p.cart a {
     .log {
         float: left;
         width: 100%;
-        display: none;
+        margin-bottom: -5px;
+        /*display: none;*/
     }
 
     .header_right {
         float: right;
         width: 43%;
-        margin: 0 auto;
+        margin-left: auto;
     }
 
     .arriv-info {
@@ -4225,7 +4248,7 @@ p.cart a {
 
     .cust {
         float: left;
-        width: 36.33%;
+        /*width: 36.33%;*/
     }
 
     .abt {
@@ -4490,8 +4513,8 @@ p.cart a {
     }
 
     .box_1 {
-        width: 100%;
-        margin: 0;
+        /*width: 100%;*/
+        /*margin: 0;*/
     }
 }
 
