--- a/frontend/templates/core/footer.html
+++ b/frontend/templates/core/footer.html
@@ -30,7 +30,7 @@
                     <div class="stay-left">
                         <input type="email" placeholder="Оставьте свой email для получения новостей" name="email">
                     </div>
-                    <input type="submit" value="подписаться">
+                    <input type="submit" value="Подписаться">
                     <div class="errors" style="width: 100%;"></div>
                 </form>
                 <div class="clearfix"></div>
