--- a/frontend/static/css/style.css
+++ b/frontend/static/css/style.css
@@ -203,7 +203,7 @@ input[type=submit].order {
     background: #aeafc5;
     padding: 10px 20px;
     border: none;
-
+    border-radius: 10px;
     font-size: 1em;
     color: #fff;
     text-decoration: none;
