--- a/frontend/templates/core/header.html
+++ b/frontend/templates/core/header.html
@@ -6,8 +6,8 @@
         <div class="header_top">
             <div class="top_right">
                 <ul>
-                    <li><a href="{% url 'info' %}#contacts">Контакты</a></li>|
-                    <li><a href="{% url 'info' %}#delivery">Доставка и оплата</a></li>|
+                    <li><a href="{% url 'contacts' %}">Контакты</a></li>|
+                    <li><a href="{% url 'info' %}">Доставка и оплата</a></li>|
                     <li><a href="" data-scroll-to=".footer">Время работы</a></li>
                 </ul>
             </div>
