--- a/frontend/templates/pages/info.html
+++ b/frontend/templates/pages/info.html
@@ -8,35 +8,12 @@
         <div class="main">
             <div class="contact">
                 <div class="contact_info">
-                    <h2 id="address">КАК НАС НАЙТИ</h2>
-                    {% component 'text.html' id='info-text-address' multiline=True %}
-                    <div class="map">{% component 'map.html' id='info-map' %}</div>
                     <h2 id="delivery">ИНФОРМАЦИЯ О ДОСТАВКЕ</h2>
                     {% component 'text.html' id='info-text-delivery' multiline=True %}
-                    <h2 id="contacts">КОНТАКТЫ</h2>
-                    {% component 'text.html' id='info-text-contacts' multiline=True %}
-                </div>
-                <div class="contact-form">
-                    <h2 id="feedback">ФОРМА ОБРАТНОЙ СВЯЗИ</h2>
-                    <form method="post" novalidate>
-                        {% csrf_token %}
-                        {{ form.non_field_errors }}
-                        {% for field in form %}
-                            <div>
-                                <span><label>{{ field.label }}</label></span>
-                                <span>{{ field }}</span>
-                                {{ field.errors }}
-                            </div>
-                        {% endfor %}
-                        <div>
-                            <span>
-                                <input type="submit" value="Отправить">
-                                {% if form.success %}
-                                    <span class="success">СООБЩЕНИЕ УСПЕШНО ОТПРАВЛЕНО</span>
-                                {% endif %}
-                            </span>
-                        </div>
-                    </form>
+                    <h2 id="delivery">УСЛОВИЯ ОПЛАТЫ</h2>
+                    {% component 'text.html' id='info-text-payment' multiline=True %}
+                    <h2 id="delivery">СКИДКИ</h2>
+                    {% component 'text.html' id='info-text-discounts' multiline=True %}
                 </div>
                 <div class="clearfix"></div>
             </div>
